card data pipeline - resolves gh-1 * Added pandas MTGDatabase * Added filtered SQLite database generation * Added question answer dataset builder

--- a/mtg_process.ipynb
+++ b/mtg_process.ipynb
@@ -9,9 +9,7 @@
    "source": [
     "%reload_ext mtg_ai\n",
     "import pandas as pd\n",
-    "from tqdm import tqdm\n",
     "from pathlib import Path\n",
-    "from mtg_ai.data import MTGCards\n",
     "from mtg_ai import constants\n",
     "from mtg_ai.training import MTGCardTraining"
    ]
@@ -88,7 +86,7 @@
     }
    ],
    "source": [
-    "mtg_card_ai = MTGCardTraining()\n"
+    "mtg_card_ai = MTGCardTraining()"
    ]
   },
   {
@@ -107,11 +105,7 @@
    "id": "5058faa8-e347-47ff-a6b2-76c1a7f87752",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import pandas as pd\n",
-    "from tqdm import tqdm\n",
-    "from pathlib import Path\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -127,17 +121,32 @@
     "    df = df.drop(constants.drop_columns, axis=1)\n",
     "    return df\n",
     "\n",
+    "\n",
     "def filter_for_modern(df: pd.DataFrame):\n",
     "    legalities = pd.json_normalize(df.pop(\"legalities\"))\n",
     "    df = df.loc[legalities[\"modern\"] == \"legal\"].reset_index(drop=True)\n",
     "    return df\n",
     "\n",
+    "\n",
     "def fill_empty_values(df: pd.DataFrame):\n",
-    "    fill_values = dict.fromkeys([\"mana_cost\", \"colors\", \"color_identity\", \"produced_mana\", \"color_indicator\"], constants.NA_STRING)\n",
-    "    fill_values.update(dict.fromkeys([\"power\", \"toughness\", \"loyalty\", ], constants.NAN_STRING))\n",
+    "    fill_values = dict.fromkeys(\n",
+    "        [\"mana_cost\", \"colors\", \"color_identity\", \"produced_mana\", \"color_indicator\"],\n",
+    "        constants.NA_STRING,\n",
+    "    )\n",
+    "    fill_values.update(\n",
+    "        dict.fromkeys(\n",
+    "            [\n",
+    "                \"power\",\n",
+    "                \"toughness\",\n",
+    "                \"loyalty\",\n",
+    "            ],\n",
+    "            constants.NAN_STRING,\n",
+    "        )\n",
+    "    )\n",
     "    fill_values[\"edhrec_rank\"] = 0\n",
     "    df.fillna(fill_values, inplace=True)\n",
     "    return df\n",
+    "\n",
     "\n",
     "def merge_lists(df: pd.DataFrame):\n",
     "    df.keywords = df.keywords.str.join(\", \")\n",
@@ -145,10 +154,12 @@
     "    df[columns] = df[columns].map(lambda x: \"\".join(x))\n",
     "    return df\n",
     "\n",
+    "\n",
     "def sort_color_strings(df: pd.DataFrame):\n",
     "    columns = [\"colors\", \"color_identity\", \"color_indicator\", \"produced_mana\"]\n",
     "    df[columns] = df[columns].map(constants.MTGColorCombo._sort_multicolor_str)\n",
     "    return df\n",
+    "\n",
     "\n",
     "def convert_column_types(df: pd.DataFrame):\n",
     "    data = {\n",
@@ -172,6 +183,7 @@
     "    }\n",
     "    df = df.astype(data)\n",
     "    return df\n",
+    "\n",
     "\n",
     "mtg_data_path = Path(\"./data/oracle-cards-20231121100139.json\")\n",
     "df: pd.DataFrame = (\n",
