--- a/mtg_combo_getter.ipynb
+++ b/mtg_combo_getter.ipynb
@@ -21,8 +21,9 @@
    "source": [
     "from mtg_combos import Combos\n",
     "import pandas as pd\n",
-    "pd.set_option('display.max_columns', None)  # or 1000\n",
-    "pd.set_option('display.max_colwidth', None)  # or 199"
+    "\n",
+    "pd.set_option(\"display.max_columns\", None)  # or 1000\n",
+    "pd.set_option(\"display.max_colwidth\", None)  # or 199"
    ]
   },
   {
